<resources>
    <string-array name="uf_array">
        <item>Todas</item>
        <item>	AC	</item>
        <item>	AL	</item>
        <item>	AM	</item>
        <item>	AP	</item>
        <item>	BA	</item>
        <item>	CE	</item>
        <item>	DF	</item>
        <item>	ES	</item>
        <item>	GO	</item>
        <item>	MA	</item>
        <item>	MG	</item>
        <item>	MS	</item>
        <item>	MT	</item>
        <item>	PA	</item>
        <item>	PB	</item>
        <item>	PE	</item>
        <item>	PI	</item>
        <item>	PR	</item>
        <item>	RJ	</item>
        <item>	RN	</item>
        <item>	RO	</item>
        <item>	RR	</item>
        <item>	RS	</item>
        <item>	SC	</item>
        <item>	SE	</item>
        <item>	SP	</item>
        <item>	TO	</item>
    </string-array>

    <string-array name="categoria_array">
        <item>Todas</item>
        <item>HOSPITAL</item>
        <item>POSTO DE SAÚDE</item>
        <item>URGÊNCIA</item>
        <item>SAMU</item>
        <item>FARMÁCIA</item>
        <item>CLÍNICA</item>
        <item>CONSULTÓRIO</item>
        <item>LABORATÓRIO</item>
        <item>APOIO À SAÚDE</item>
        <item>ATENÇÃO ESPECÍFICA</item>
        <item>UNIDADE ADMINISTRATIVA</item>
        <item>ATENDIMENTO DOMICILIAR</item>
    </string-array>

    <string-array name="especialidade_array">
        <item>Todas</item>
        <item>DST/AIDS</item>
        <item>NEFROLOGIA</item>
        <item>OSTEOGENESIS IMPERFECTA</item>
        <item>TRANSEXUALIZADOR</item>
        <item>NEUROLOGIA/NEUROCIRURGIA</item>
        <item>PNEUMOLOGIA</item>
        <item>TRANSPLANTES</item>
        <item>ATENCAO A SAUDE AUDITIVA</item>
        <item>UNIDADE TERAPIA INTENSIVA</item>
        <item>TRAUMATO-ORTOPEDIA</item>
        <item>QUEIMADOS</item>
        <item>ATENCAO A OBESIDADE GRAVE</item>
        <item>ONCOLOGIA</item>
        <item>VIDEOCIRURGIAS</item>
        <item>ATENCAO A SAUDE OCULAR</item>
        <item>ATENCAO A SAUDE MENTAL</item>
        <item>HOSPITAL DIA</item>
        <item>DOR CRONICA</item>
        <item>PLANEJAMENTO FAMILIAR/ESTERELIZACAO</item>
        <item>CUIDADOS PROLONGADOS</item>
        <item>TERAPIA NUTRICIONAL</item>
        <item>REABILITACAO</item>
        <item>UNIDADE DE CUIDADOS INTERMEDIARIOS NEONATAL</item>
        <item>ATENCAO A SAUDE BUCAL</item>
        <item>INTERNACAO DOMICILIAR</item>
        <item>URGENCIA</item>
        <item>ATENCAO AO IDOSO</item>
        <item>CARDIOVASCULAR</item>
        <item>MATERNO INFANTIL</item>
        <item>PROGRAMA DA MAMOGRAFIA MÓVEL</item>
    </string-array>

    <string name="app_name">Estabelecimentos de Saude</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="required">Campo obrigatório.</string>
    <string name="autenticado">autenticado</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="uf">UF:</string>
    <string name="especialidade">Especialidade:</string>
    <string name="vinculo_sus">Possui vínculo SUS:</string>
    <string name="categoria">Categoria:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_maps">Map</string>
    <string name="abrir_mapa">Abrir Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
